// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test NetworkStatus component should render correctly when everything in network is loading 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class=""
>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="loader.svg"
    />
     
    <h2>
      Authenticating
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="loader.svg"
    />
     
    <h2>
      Creating User
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="loader.svg"
    />
     
    <h2>
      Connecting to the bank
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="loader.svg"
    />
     
    <h2>
      Waiting for job to finish
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="loader.svg"
    />
     
    <h2>
      Getting transactions
    </h2>
  </div>
</div>
`;

exports[`Test NetworkStatus component should render correctly when everything in network is successful 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class=""
>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="success.svg"
    />
     
    <h2>
      Authenticating
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="success.svg"
    />
     
    <h2>
      Creating User
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="success.svg"
    />
     
    <h2>
      Connecting to the bank
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="success.svg"
    />
     
    <h2>
      Waiting for job to finish
    </h2>
  </div>
  <div
    class="c0"
  >
    <img
      alt="loader"
      src="success.svg"
    />
     
    <h2>
      Getting transactions
    </h2>
  </div>
</div>
`;
